# embedding_notebook

./: README.md  embedding_vizualization.ipynb  pyproject.toml
processed/: embeddings.csv
