[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["nheingit <60185486+nheingit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.0"
requests = "^2.31.0"
pandas = "^2.2.2"
tiktoken = "^0.6.0"
langchain = "^0.1.17"
openai = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
